<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="invitation_action">com.lxy.whv.INVITATION_ACTION</string>


    <string name="app_name">打工度假</string>


    <string name="update_service_versionIsAlreadyNew">已经是最新版本了</string>
    <string name="update_service_sureToUpdate">确定更新版本吗</string>
    <string name="update_service_updateLog">更新日志</string>
    <string name="update_service_installNewVersion">安装新版本</string>
    <string name="update_service_laterNotify">稍后提醒</string>
    <string name="update_service_haveNewVersion">版本更新</string>

    <string name="setting_preference_voice">语音</string>

    <string name="update_service_failedToGetData">获取数据失败</string>
    <string name="entry_register_activity_password">密码</string>
    <string name="login">登录</string>
    <string name="conversation_messages">会话</string>
    <string name="contact">联系人</string>
    <string name="profile_settings">Settings</string>
    <string name="profile_title">我</string>
    <string name="discover_title">发现</string>

    <string name="bootstrap_title">完善资料</string>

    <string name="login_email_hint">请输入邮箱</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="ensurePasswordHint">请在此输入密码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="ensurePassword">确认密码 </string>
    <string name="register">注册</string>
    <string name="forget_password">找回密码</string>

    <string name="password_can_not_null">密码不能为空</string>
    <string name="username_cannot_null">用户名不能为空</string>
    <string name="email_cannot_null">邮箱不能为空</string>
    <string name="password_too_short">密码长度不能小于6个字符</string>
    <string name="username_too_short">用户名不能少于6个字符</string>
    <string name="password_not_consistent">输入的两次密码不一致</string>
    <string name="registerSucceed">注册成功</string>
    <string name="registerFailed">注册失败。</string>
    <string name="forgetpassword_error_no_email">您没有输入邮箱地址</string>
    <string name="forgetpassword_email_send_success">已发送一份重置密码的指令到用户的邮箱</string>
    <string name="forgetpassword_email_send_error">找回密码失败：</string>


    <string name="not_have_account">还没有账号？</string>
    <string name="forget_password_tip">忘记密码？</string>
    <string name="register_rightnow">立即注册 &gt;</string>
    <string name="register_forget_password">忘记密码 &gt;</string>
    <string name="discover_metres">米</string>
    <string name="discover_unknown">未知</string>
    <string name="discover_recent_login_time">最近登录时间:</string>

    <string name="contact_account">账号</string>
    <string name="contact_gender">性别</string>
    <string name="contact_age">年龄</string>
    <string name="contact_state">状态</string>
    <string name="contact_aboutme">签名</string>
    <string name="contact_search">搜索</string>
    <string name="contact_wechat">微信</string>
    <string name="contact_weibo">微博</string>
    <string name="contact_line">Line</string>
    <string name="profile_vibrate">震动</string>
    <string name="contact_chat">发起会话</string>
    <string name="contact_info_delete">删除好友</string>
    <string name="contact_add_friend">添加好友</string>
    <string name="contact_new_friends">新朋友</string>
    <string name="contact_deleteFriendRequest">删除好友请求</string>
    <string name="contact_agreed">已同意</string>
    <string name="contact_deleteContact">删除联系人</string>
    <string name="common_sure">确定</string>
    <string name="contact_deleteSucceed">删除成功</string>
    <string name="contact_findFriends">查找好友</string>
    <string name="contact_add">添加</string>
    <string name="contact_sendRequestSucceed">发送请求成功，等待对方验证</string>
    <string name="contact_personalInfo">个人资料</string>
    <string name="contact_detailInfo">详细资料</string>
    <string name="contact_male">男</string>
    <string name="contact_female">女</string>
    <string name="profile_notifySetting">提醒设置</string>
    <string name="profile_notifyWhenNews">接收新消息通知</string>
    <string name="conversation_group">群组</string>
    <string name="conversation_group_square">群聊群聊</string>
    <string name="conversation_name">群组名称</string>
    <string name="conversation_create">创建</string>
    <string name="conversation_Members">群组成员</string>
    <string name="conversation_inviteSucceed">已发出邀请</string>
    <string name="conversation_inviteMembers">邀请群成员</string>
    <string name="conversation_kickTips">确认要踢走该成员吗</string>
    <string name="conversation_detail_invite">邀请</string>
    <string name="conversation_quitGroup">退群</string>
    <string name="conversation_quit_group_tip">确定要退出该群组？</string>

    <string name="utils_kilometres">公里</string>
    <string name="refreshable_view_pull_to_refresh">下拉可以刷新</string>
    <string name="refreshable_view_release_to_refresh">释放立即刷新</string>
    <string name="refreshable_view_refreshing">正在刷新…</string>
    <string name="profile_fragment_checkUpdate">检查更新</string>
    <string name="profile_fragment_feedback">反馈</string>
    <string name="profile_fragment_about">关于</string>
    <string name="profile_fragment_for_fun">啊哈哈哈哈哈哈哈哈</string>
    <string name="about_info_text1">打工独家News查看各种资讯，附近的人查找身边的WHVer，同行寻找同伴，更多功能开发中……</string>
    <string name="about_info_text2">对啊，就是很多很多的bug啊。正在改，正在改……需求意见反馈中发来，欢迎搞IT的小伙伴联系我：）</string>
    <string name="about_button_text1">不要点我，除非你是程序员</string>
    <string name="about_version_text">V</string>


    <string name="discover_fragment_sort">排序</string>
    <string name="discover_fragment_loginTime">登录时间</string>
    <string name="discover_fragment_distance">距离</string>
    <string name="discover_post">版聊</string>
    <string name="discover_news">打工度假News</string>
    <string name="discover_nearby">附近的人</string>
    <string name="discover_together">同行</string>
    <string name="discover_meetup">聚会</string>
    <string name="discover_more">杂七杂八</string>
    <string name="contact_alreadyCreateAddRequest">请求已发送</string>
    <string name="conversation_alreadyQuitConv">已退出群</string>
    <string name="conversation_detail_kickSucceed">已踢走该成员</string>
    <string name="conversation_detail_title">详情</string>

    <string name="discover_more_imagineaustralia_weibo">大使馆微博</string>
    <string name="discover_more_douban">豆瓣澳大利亚WHV小组</string>
    <string name="discover_more_visa_application_quick">签证申请快捷入口</string>
    <string name="discover_more_visa_application">签证申请地址</string>
    <string name="discover_more_backpackers_au">背包客栈(TW)澳洲打工渡假</string>
    <string name="discover_more_map_web">澳洲地图（WEB）</string>
    <string name="discover_more_seek">seek找工作</string>


    <string name="chat_location_activity_send">发送</string>
    <string name="chat_getGeoInfoFailed">获取地理位置信息失败!</string>
    <string name="chat_geoIsSame">获取坐标相同</string>
    <string name="chat_location_mapKeyErrorTips">key 验证出错! 请在 AndroidManifest.xml 文件中检查 key 设置</string>
    <string name="chat_reverseGeoCodeResultIs">反编码得到的地址：</string>
    <string name="chat_cannotGetYourAddressInfo">无法获取到您的位置信息！</string>

    <string name="chat_xlistview_footer_hint_normal">查看更多</string>
    <string name="chat_xlistview_footer_hint_ready">松开载入更多</string>
    <string name="push_add_request">您有新的好友申请</string>
    <string name="message_when_agree_request">我们已经是好友了，来聊天吧</string>
    <string name="title_activity_visa_tracking">VisaTrackingActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>

    <string name="bootstrap_application_state_tip">WHV申请状态</string>
    <string name="bootstrap_state_want_to_know">我要先了解一下WHV</string>
    <string name="bootstrap_state_preparing">准备签证资料中</string>
    <string name="bootstrap_state_submiting">申请进行中</string>
    <string name="bootstrap_state_granted">已下签，准备中</string>
    <string name="bootstrap_state_abroad">人在澳洲</string>
    <string name="bootstrap_state_returned">澳洲归来</string>
    <string name="bootstrap_state_pr">移民啦哈哈哈</string>
    <string name="bootstrap_state_submit">确认</string>
    <string name="bootstrap_state_tip_select">先选择申请状态唉~</string>
    <string name="bootstrap_prefile_tip">个人信息设置</string>

    <string name="profile_feedback_hint">期待你的反馈意见/建议</string>
    <string name="profile_save">保存</string>
    <string name="company_filter">过滤器</string>
    <string name="company_info_edit_title">编辑入澳计划</string>
    <string name="company_info_edit_tip_time">请输入计划出发时间</string>
    <string name="company_info_edit_tip_time_error">时间错误，请反馈问题谢谢</string>
    <string name="company_info_edit_tip_destination">请输入目标地</string>
    <string name="company_info_edit_destination_dialog_title">城市选择</string>
    <string name="company_info_plan_tv_time_hint">出发时间</string>
    <string name="company_info_plan_tv_destination_hint">目的地</string>
    <string name="company_info_switch_company_show_my_info">是否显示我的信息:</string>
    <string name="company_info_help_text1">只有在你设置了计划出行时间后其他人才会在同行中找到你，也可以通过关闭 “是否显示我的信息”选项来隐藏自己的出行计划</string>
    <string name="company_info_help_text2">你可以在同行界面设置过滤器来寻找小伙伴/帖子，点击×清空你的过滤设置</string>


    <string name="company_post_comment">回复</string>
    <string name="company_post_comment_time">回复时间:</string>
    <string name="company_post_publish_time">发布时间:</string>

    <string name="gender_male">男</string>
    <string name="gender_female">女</string>

    <string name="city_australia">全澳大利亚</string>
    <string name="city_sydney">悉尼</string>
    <string name="city_melb">墨尔本</string>
    <string name="city_brisbane">布里斯班</string>
    <string name="city_perth">珀斯</string>
    <string name="city_adelaide">阿德莱德</string>
    <string name="city_canberra">堪培拉</string>
    <string name="city_hobart">霍巴特</string>
    <string name="city_newzealand">新西兰</string>
    <string name="city_other">其他</string>


</resources>