<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_top_margin"
        android:background="@android:color/white"
        android:orientation="vertical">


        <View style="@style/DividerLine.Horizontal" />

        <TextView
            android:id="@+id/discover_more_imagineaustralia_weibo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_item_height"
            android:background="@drawable/btn_selector"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/common_horizontal_margin"
            android:paddingRight="@dimen/common_horizontal_margin"
            android:text="@string/discover_more_imagineaustralia_weibo" />

        <View style="@style/DividerLine.Horizontal" />

        <TextView
            android:id="@+id/discover_more_douban"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_item_height"
            android:background="@drawable/btn_selector"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/common_horizontal_margin"
            android:paddingRight="@dimen/common_horizontal_margin"
            android:text="@string/discover_more_douban" />

        <View style="@style/DividerLine.Horizontal" />

        <TextView
            android:id="@+id/discover_more_visa_application_quick"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_item_height"
            android:background="@drawable/btn_selector"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/common_horizontal_margin"
            android:paddingRight="@dimen/common_horizontal_margin"
            android:text="@string/discover_more_visa_application_quick" />

        <View style="@style/DividerLine.Horizontal" />

        <TextView
            android:id="@+id/discover_more_visa_application"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_item_height"
            android:background="@drawable/btn_selector"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/common_horizontal_margin"
            android:paddingRight="@dimen/common_horizontal_margin"
            android:text="@string/discover_more_visa_application" />

        <View style="@style/DividerLine.Horizontal" />
        <TextView
            android:id="@+id/discover_more_backpackers_au"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_item_height"
            android:background="@drawable/btn_selector"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/common_horizontal_margin"
            android:paddingRight="@dimen/common_horizontal_margin"
            android:text="@string/discover_more_backpackers_au" />

        <View style="@style/DividerLine.Horizontal" />

        <TextView
            android:id="@+id/discover_more_map_web"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_item_height"
            android:background="@drawable/btn_selector"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/common_horizontal_margin"
            android:paddingRight="@dimen/common_horizontal_margin"
            android:text="@string/discover_more_map_web" />

        <View style="@style/DividerLine.Horizontal" />
    </LinearLayout>
</ScrollView>