<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:orientation="vertical">

    <include layout="@layout/common_header_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_top_margin"
            android:background="@android:color/white"
            android:orientation="vertical">


            <View style="@style/DividerLine.Horizontal" />

            <TextView
                android:id="@+id/discover_post"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:background="@drawable/btn_selector"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/common_horizontal_margin"
                android:paddingRight="@dimen/common_horizontal_margin"
                android:text="@string/discover_post" />

            <View style="@style/DividerLine.Horizontal" />

            <TextView
                android:id="@+id/discover_nearby"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:background="@drawable/btn_selector"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/common_horizontal_margin"
                android:paddingRight="@dimen/common_horizontal_margin"
                android:text="@string/discover_nearby" />

            <View style="@style/DividerLine.Horizontal" />

            <TextView
                android:id="@+id/discover_together"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:background="@drawable/btn_selector"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/common_horizontal_margin"
                android:paddingRight="@dimen/common_horizontal_margin"
                android:text="@string/discover_together" />

            <View style="@style/DividerLine.Horizontal" />

            <TextView
                android:id="@+id/discover_meetup"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:background="@drawable/btn_selector"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/common_horizontal_margin"
                android:paddingRight="@dimen/common_horizontal_margin"
                android:text="@string/discover_meetup" />

            <View style="@style/DividerLine.Horizontal" />

            <TextView
                android:id="@+id/discover_more"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_item_height"
                android:background="@drawable/btn_selector"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/common_horizontal_margin"
                android:paddingRight="@dimen/common_horizontal_margin"
                android:text="@string/discover_more" />

            <View style="@style/DividerLine.Horizontal" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>