<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_header_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_top_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical">

                <View style="@style/DividerLine.Horizontal" />

                <LinearLayout
                    android:id="@+id/profile_avatar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_item_height"
                    android:background="@drawable/btn_selector"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/common_horizontal_margin"
                    android:paddingRight="@dimen/common_horizontal_margin">

                    <ImageView
                        android:id="@+id/profile_avatar_view"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/chat_default_user_avatar" />

                    <TextView
                        android:id="@+id/profile_username_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:drawableRight="@drawable/common_view_right_arrow_pic"
                        android:text="username" />
                </LinearLayout>

                <View style="@style/DividerLine.Horizontal" />

                <TextView
                    android:id="@+id/profile_notifysetting_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_item_height"
                    android:background="@drawable/btn_selector"
                    android:drawableRight="@drawable/common_view_right_arrow_pic"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/common_horizontal_margin"
                    android:paddingRight="@dimen/common_horizontal_margin"
                    android:text="@string/profile_notifySetting" />

                <View style="@style/DividerLine.Horizontal" />

                <TextView
                    android:id="@+id/profile_checkupdate_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_item_height"
                    android:background="@drawable/btn_selector"
                    android:drawableRight="@drawable/common_view_right_arrow_pic"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/common_horizontal_margin"
                    android:paddingRight="@dimen/common_horizontal_margin"
                    android:text="@string/profile_fragment_checkUpdate" />

                <View style="@style/DividerLine.Horizontal" />

                <TextView
                    android:id="@+id/profile_feedback_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_item_height"
                    android:background="@drawable/btn_selector"
                    android:drawableRight="@drawable/common_view_right_arrow_pic"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/common_horizontal_margin"
                    android:paddingRight="@dimen/common_horizontal_margin"
                    android:text="@string/profile_fragment_feedback" />

                <View style="@style/DividerLine.Horizontal" />

                <TextView
                    android:id="@+id/profile_about"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_item_height"
                    android:background="@drawable/btn_selector"
                    android:drawableRight="@drawable/common_view_right_arrow_pic"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/common_horizontal_margin"
                    android:paddingRight="@dimen/common_horizontal_margin"
                    android:text="关于" />

                <View style="@style/DividerLine.Horizontal" />
            </LinearLayout>

            <TextView
                android:id="@+id/profile_logout_btn"
                style="@style/My.Button.logout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/common_horizontal_margin"
                android:layout_marginRight="@dimen/common_horizontal_margin"
                android:layout_marginTop="@dimen/activity_top_margin"
                android:gravity="center"
                android:text="注销" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>